@@ -1,5 +1,5 @@
-2d78fcc910211bc95a13df4c04aa33a9 *DESCRIPTION
-44319f60633b0e7af5e2bfdc03a0e2c1 *NAMESPACE
+3c554a4a04bcdba26314c11a506e5993 *DESCRIPTION
+31ca01a49709a7c6236f70afde77af36 *NAMESPACE
 58002030805dc4ee1858adac8cfd49be *R/00_Class.R
 1d34f431ff2d025b6f00bbc07981fdc6 *R/00_Generic.R
 71bb5f855dd0d5b2a4fae3afdcc6e35f *R/00_Utils.R
@@ -13,22 +13,23 @@ e34cdd37af2364eb703122ab57879676 *R/arb_special.R
 e54ea9671e3cc655cfc3a1f64d98648a *R/arf.R
 50d9ffb90340626a3d60edfa7416daf5 *R/asVector.R
 fa669bf5228b91263f43ab0727235684 *R/conditions.R
-076972fbb9c4b9af049966555c3475ad *R/flint.R
+a1f535a02e8a5d80cfe1ab15965045a3 *R/flint.R
 b34666731d80df6e59ba8f8a51927b69 *R/fmpq.R
 0cfd43663216201d151b68d9a2f240e0 *R/fmpz.R
+e78076cfa7247878ce09a406a8748b78 *R/foreign.R
 ca838b96b4b8ded95286ac632d1c01e0 *R/mag.R
 d82b0f508b15c8523e8412806b937d88 *R/random.R
 798982b284bb7b124fca86eeb166f673 *R/slong.R
 e7d9f16e67556bda476089b0bb1c2076 *R/ulong.R
 8e328d09ed5fd7f47657561239ce63a9 *R/utils.R
-7ca4f3877aebed9e011ac0b9776dd884 *R/zzz.R
+43d9c425bb988cd9150185557c6a7674 *R/zzz.R
 533839446f70bde34a1050627ce80586 *build/partial.rdb
 131a236039d88977475269c6ee6c6e2c *cleanup
 8da001ce1b225bf755b427e26132804a *cleanup.win
-b3f05ab7dcc84d9d129d056bede74e0e *configure
-7be5703c205bd271d3b116dde3c1e4fb *configure.ac
+e1f23883b889c52a8655856fa9a97eab *configure
+5514442401b03bd77de1ef4ee71815e6 *configure.ac
 4a8f3a18ff6461fac011331d909c3b1b *configure.win
-85e3ee2ebf8a5ca5a1c6abf62b0ca728 *inst/NEWS.Rd
+bc77db70ecb0e108f1352a46ed703e66 *inst/NEWS.Rd
 d4c29502a9b5c3c196519fc620271b0c *man/Constants.Rd
 7cefeccf4cde59f997af04c3e8c9fb0a *man/OptionalCharacter-class.Rd
 4169980e4b9c445131536d3371dabd24 *man/Part.Rd
